--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -35,7 +36,11 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
     "husky": "^7.0.0",
+    "@tailwindcss/forms": "^0.5.1",
+    "tailwindcss": "^3.0.24",
     "prettier": "2.6.1"
   }
 }
