--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite & npm --prefix ./server/ run dev",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "next start",
