--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
@@ -24,7 +24,7 @@
     "strict": true,
     "target": "es2018",
     "noEmit": true,
-    "incremental": true
+    "incremental": true,
   },
   "include": [
     "**/*.ts",
