--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "allowJs": true,
     "allowUnreachableCode": false,
