--- a/package.json
+++ b/package.json
@@ -16,31 +16,36 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "axios": "^0.27.2",
+    "cogo-toast": "^4.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.52.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@tailwindcss/forms": "^0.5.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.1.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.13",
     "husky": "^7.0.0",
-    "@tailwindcss/forms": "^0.5.1",
+    "postcss": "^8.4.13",
+    "prettier": "2.6.1",
     "tailwindcss": "^3.0.24",
-    "prettier": "2.6.1"
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
