--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
     "format": "prettier --write .",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
@@ -29,23 +30,27 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@tailwindcss/forms": "^0.5.1",
+    "@testing-library/react": "^12.1.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
+    "c8": "^7.11.3",
     "eslint": "^8.1.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0",
+    "jsdom": "^19.0.0",
     "postcss": "^8.4.13",
-    "prettier": "2.6.1",
+    "prettier": "^2.6.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vitest": "^0.13.1"
   }
 }
