--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,20 @@
 {
   "name": "wet-bat-travel-api",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run migrate && ts-node-dev --transpile-only src/main.ts",
-    "typeorm": "ts-node-dev node_modules/.bin/typeorm",
-    "migrate": "ts-node-dev node_modules/.bin/typeorm migration:run"
+    "dev": "ts-node-dev --transpile-only src/main.ts",
+    "typeorm": "ts-node-dev node_modules/.bin/typeorm"
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
@@ -21,7 +24,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/uuid": "^8.3.4",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.3"
   }
 }
